--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <source src="images/GANESH.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
-                  <img src='images/Ganes.png' width="160">
+                  <img src='images/Ganesh.png' width="160">
                 </div>
                   <script type="text/javascript">
                   function hnerf_start() {
