--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <tr onmouseout="hnerf_stop()" onmouseover="hnerf_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <img src='images/reflec.jpeg' width="160">
+                  <img src='images/reflec.jpg' width="160">
                 </div>
                   <script type="text/javascript">
                   function hnerf_start() {
